# odoomigrations

./: .gitignore  Cargo.toml  README.md  test.txt
src/: main.rs  mode_section.rs  run_file.rs  run_migration.rs  server.rs
src/lib/: mod.rs  mode_section.rs  run_file.rs  server.rs
tests/: test_files_validation.rs  test_functions_sequence.rs  test_run_file.rs
tests/static/: test_run_file_1  test_run_file_2  test_run_file_3  test_run_file_4
