[package]
name = "odoomigration"
version = "0.1.0"
edition = "2021"

[lib]
name = "odoomigration"
path = "src/lib/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
bytes = {version = "1"}
log = "0.4"
log4rs = "1.1.1"